--- a/package.json
+++ b/package.json
@@ -14,19 +14,25 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "@vue/shared": "^3.3.4",
+    "@vueuse/core": "^10.3.0",
     "el-form-render": "workspace:*",
     "element-plus": "^2.3.8",
+    "qs": "^6.11.2",
     "vue": "^3.2.0"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.2",
+    "@unocss/preset-rem-to-px": "^0.54.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue-macros/volar": "^0.12.3",
     "rollup": "^3.27.0",
     "rollup-plugin-esbuild": "^5.0.0",
     "tslib": "^2.6.1",
     "typescript": "^5.0.2",
+    "unocss": "^0.54.1",
+    "unplugin-auto-import": "^0.16.6",
     "unplugin-vue": "^4.2.5",
     "unplugin-vue-macros": "^2.4.0",
     "vite": "^4.4.5",
