--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/shared": "^3.3.4",
     "@vueuse/core": "^10.3.0",
     "el-form-render": "workspace:*",
+    "@el-lowcode/crud": "workspace:*",
     "element-plus": "^2.3.8",
     "qs": "^6.11.2",
     "vue": "^3.2.0"
