--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable",],
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
     "noImplicitAny": false,
     "resolveJsonModule": true,
@@ -34,7 +34,7 @@
       "@vue-macros/volar/export-props"
     ]
   },
-  "include": ["packages", "shims-vue.d.ts", "auto-imports.d.ts"],
+  "include": ["packages/**/*", "shims-vue.d.ts", "auto-imports.d.ts", "global.d.ts"],
   "exclude": ["node_modules", "**/dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
