--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "build:packages": "rollup -c && pnpm run build:types",
-    "build:types": "vue-tsc --declaration --emitDeclarationOnly --outDir packages/el-form-render/dist/types",
+    "build:types": "vue-tsc --d --emitDeclarationOnly --outFile packages/utils/dist/index.d.ts packages/utils/index.ts",
     "preview": "vite preview",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "@el-lowcode/crud": "workspace:*",
     "@vue/shared": "^3.3.4",
     "@vueuse/core": "^10.3.0",
     "el-form-render": "workspace:*",
-    "@el-lowcode/crud": "workspace:*",
     "element-plus": "^2.3.8",
     "qs": "^6.11.2",
     "vue": "^3.2.0"
@@ -25,11 +25,17 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.2",
+    "@types/node": "^20.4.8",
+    "@unocss/postcss": "^0.54.1",
     "@unocss/preset-rem-to-px": "^0.54.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue-macros/volar": "^0.12.3",
+    "dts-bundle-generator": "^8.0.1",
     "rollup": "^3.27.0",
+    "rollup-plugin-dts": "^5.3.1",
     "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
     "typescript": "^5.0.2",
     "unocss": "^0.54.1",
