--- a/packages/crud/package.json
+++ b/packages/crud/package.json
@@ -10,7 +10,11 @@
   "types": "dist/types/index.d.ts",
   "files": ["dist"],
   "dependencies": {
-    
+    "@vue/shared": "^3.3.4",
+    "@vueuse/core": "^10.3.0",
+    "el-form-render": "workspace:*",
+    "element-plus": "^2.3.8",
+    "vue": "^3.2.0"
   },
   "peerDependencies": {
     "element-plus": "^2.3.8",
