--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "target": "ESNext",
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "moduleResolution": "Bundler",
+    "allowSyntheticDefaultImports": true,
+    "types": ["node"]
   },
-  "include": ["vite.config.ts", "build/**/*"]
+  "include": ["vite.config.ts", "build", "test.ts"]
 }
