--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@el-lowcode/crud": "workspace:*",
+    "@el-lowcode/utils": "workspace:*",
     "@vue/shared": "^3.3.4",
     "@vueuse/core": "^10.3.0",
     "el-form-render": "workspace:*",
@@ -33,6 +34,7 @@
     "dts-bundle-generator": "^8.0.1",
     "rollup": "^3.27.0",
     "rollup-plugin-dts": "^5.3.1",
+    "rollup-plugin-dts-bundle-generator": "^1.4.0",
     "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-postcss": "^4.0.2",
     "ts-node": "^10.9.1",
