--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vue-tsc && vite build",
     "build:packages": "rollup -c && pnpm run build:types",
     "build:types": "vue-tsc --d --emitDeclarationOnly --outFile packages/utils/dist/index.d.ts packages/utils/index.ts",
+    "clean": "rimraf --glob dist \"packages/*/dist\"",
     "preview": "vite preview",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
@@ -32,14 +33,14 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue-macros/volar": "^0.12.3",
     "dts-bundle-generator": "^8.0.1",
-    "rollup": "^3.27.0",
+    "fast-glob": "^3.3.1",
+    "rollup": "^3.27.2",
     "rollup-plugin-dts": "^5.3.1",
     "rollup-plugin-dts-bundle-generator": "^1.4.0",
     "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
-    "typescript": "^5.0.2",
+    "typescript": "^5.1.6",
     "unocss": "^0.54.1",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue": "^4.2.5",
