--- a/packages/crud/package.json
+++ b/packages/crud/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.2",
   "type": "module",
   "main": "dist/index.cjs",
-  "module": "index.ts",
+  "module": "dist/index.mjs",
   "unpkg": "dist/index.iife.js",
   "jsdelivr": "dist/index.iife.js",
   "types": "dist/index.d.ts",
   "files": ["dist"],
   "dependencies": {
-    
+    "@el-lowcode/render": "workspace:*"
   },
   "peerDependencies": {
     "element-plus": "^2.3.8",
