--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   },
   "dependencies": {
     "@el-lowcode/crud": "workspace:*",
-    "@el-lowcode/utils": "workspace:*",
     "@el-lowcode/render": "workspace:*",
+    "@el-lowcode/utils": "workspace:*",
     "@vue/shared": "^3.3.4",
     "@vueuse/core": "^10.3.0",
     "el-form-render": "workspace:*",
     "element-plus": "^2.3.8",
     "qs": "^6.11.2",
+    "vite-plugin-vue-preview": "^1.3.0",
     "vue": "^3.2.0"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "unplugin-vue": "^4.2.5",
     "unplugin-vue-macros": "^2.4.0",
     "vite": "^4.4.5",
+    "vite-plugin-markdown-preview": "^1.0.4",
     "vitepress": "1.0.0-beta.7",
     "vue-tsc": "^1.8.5"
   }
