--- a/packages/el-form-render/package.json
+++ b/packages/el-form-render/package.json
@@ -1,17 +1,17 @@
 {
   "name": "el-form-render",
   "private": false,
-  "version": "0.0.2",
+  "version": "0.0.8",
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "unpkg": "dist/index.iife.js",
   "jsdelivr": "dist/index.iife.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
-  "dependencies": {
-    
-  },
+  "files": [
+    "dist"
+  ],
+  "dependencies": {},
   "peerDependencies": {
     "element-plus": "^2.3.8",
     "vue": "^3.2.0"
