--- a/packages/crud/package.json
+++ b/packages/crud/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@el-lowcode/crud",
   "private": false,
-  "version": "0.0.8",
+  "version": "0.0.12",
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
@@ -12,7 +12,7 @@
     "dist"
   ],
   "dependencies": {
-    "el-form-render": "*"
+    "el-form-render": "^0.0.12"
   },
   "peerDependencies": {
     "element-plus": "^2.3.8",
