--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,5 +5,5 @@
     "allowSyntheticDefaultImports": true,
     "types": ["node"]
   },
-  "include": ["vite.config.ts", "build"]
+  "include": ["vite.config.ts", "build", "docs/.vitepress/config.ts"]
 }
