--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "el-lowcode",
-  "private": true,
-  "version": "0.0.14",
+  "private": false,
+  "version": "0.0.15",
   "type": "module",
   "scripts": {
     "dev": "vite",
