--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.4.0",
     "el-form-render": "workspace:*",
     "element-plus": "^2.3.8",
+    "fs-extra": "^11.1.1",
     "qs": "^6.11.2",
     "vite-plugin-vue-preview": "^1.3.0",
     "vue": "^3.2.0"
