--- a/.workflow/branch-pipeline.yml
+++ b/.workflow/branch-pipeline.yml
@@ -20,17 +20,21 @@ stages:
         displayName: Nodejs 构建
         nodeVersion: 14.16.0
         commands:
+          - npm i -g pnpm
+          - ''
           - pnpm install && rm -rf ./docs && pnpm docs:build && pnpm build
         artifacts:
           - name: BUILD_ARTIFACT
             path:
               - ./docs
+        caches: []
         strategy: {}
       - step: publish@general_artifacts
         name: publish_general_artifacts
         displayName: 上传制品
         dependArtifact: BUILD_ARTIFACT
         artifactName: output
+        strategy: {}
         dependsOn: build_nodejs
   - name: release
     displayName: 发布
@@ -43,3 +47,4 @@ stages:
         dependArtifact: output
         version: 1.0.0.0
         autoIncrement: true
+        strategy: {}
