--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@unocss/preset-rem-to-px": "0.54.1",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue-macros/volar": "^0.14.3",
+    "acorn": "^8.10.0",
+    "acorn-walk": "^8.2.0",
     "chalk": "^5.3.0",
     "dts-bundle-generator": "^8.0.1",
     "esbuild": "^0.19.4",
@@ -55,7 +57,9 @@
     "estree-walker": "^3.0.3",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
+    "gogocode": "^1.0.55",
     "magic-string": "^0.30.4",
+    "micromatch": "^4.0.5",
     "msw": "^1.2.3",
     "rollup": "^3.27.2",
     "rollup-plugin-dts": "^5.3.1",
@@ -65,8 +69,10 @@
     "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.65.1",
+    "strip-literal": "^1.3.0",
     "tslib": "^2.6.1",
     "typescript": "^5.1.6",
+    "ufo": "^1.3.1",
     "unocss": "0.54.1",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.17.0",
