--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@el-lowcode/utils": "workspace:*",
     "@element-plus/icons-vue": "^2.1.0",
     "@guolao/vue-monaco-editor": "^1.3.0",
+    "@vue/compiler-sfc": "^3.3.6",
     "@vue/shared": "^3.3.4",
     "@vueuse/core": "^10.5.0",
     "axios": "^1.4.0",
