--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -31,6 +31,7 @@
   },
   "peerDependencies": {
     "element-plus": "^2.3.8",
-    "vue": "^3.2.0"
+    "vue": "^3.2.0",
+    "@vue/compiler-sfc": "^3.2.0"
   }
 }
