--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,6 +9,13 @@
   "jsdelivr": "dist/index.iife.js",
   "types": "dist/index.d.ts",
   "files": ["dist"],
+  "exports": {
+    ".": {
+      "development": "./index.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "dependencies": {
     
   },
