--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@vue/shared": "^3.3.4",
     "@vueuse/core": "^10.5.0",
     "@vueuse/router": "^10.5.0",
+    "ant-design-vue": "^4.0.0",
     "axios": "^1.4.0",
     "designer": "^1.0.2",
     "el-form-render": "workspace:*",
     "el-lowcode": "workspace:*",
     "element-plus": "^2.3.14",
+    "naive-ui": "^2.36.0",
     "qs": "^6.11.2",
     "uuid": "^9.0.1",
     "vue": "^3.3.4",
@@ -49,6 +51,7 @@
     "@unocss/postcss": "0.54.1",
     "@unocss/preset-rem-to-px": "0.54.1",
     "@vitejs/plugin-vue": "^4.3.4",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue-macros/volar": "^0.14.3",
     "acorn": "^8.10.0",
     "acorn-walk": "^8.2.0",
@@ -60,6 +63,7 @@
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
     "gogocode": "^1.0.55",
+    "import-meta-resolve": "^4.0.0",
     "magic-string": "^0.30.4",
     "micromatch": "^4.0.5",
     "msw": "^1.2.3",
@@ -80,6 +84,7 @@
     "unplugin-icons": "^0.17.0",
     "unplugin-vue": "^4.2.5",
     "unplugin-vue-components": "^0.25.2",
+    "unplugin-vue-jsx": "^0.2.2",
     "unplugin-vue-macros": "^2.4.0",
     "vite": "^4.4.5",
     "vite-plugin-markdown-preview": "^1.1.1",
