--- a/packages/crud/package.json
+++ b/packages/crud/package.json
@@ -12,11 +12,16 @@
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "unpkg": "dist/index.iife.js",
-  "jsdelivr": "dist/index.iife.js",
-  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "development": "./index.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "dependencies": {
     "@vue/shared": "^3.2.0",
     "@el-lowcode/render": "^0.0.17",
