--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -11,18 +11,23 @@
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
-  "unpkg": "dist/index.iife.js",
-  "jsdelivr": "dist/index.iife.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "development": "./index.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
   "dependencies": {
     "@el-lowcode/crud": "^0.0.16",
     "@guolao/vue-monaco-editor": "^1.3.0",
     "@vue/shared": "^3.2.0",
     "@vueuse/core": "^10.5.0",
-    "el-form-render": "^0.0.16",
+    "el-form-render": "^0.0.17",
     "uuid": "^9.0.1",
     "vue-draggable-plus": "^0.2.6",
     "wc-appbar": "^0.0.8",
