--- a/packages/el-form-render/package.json
+++ b/packages/el-form-render/package.json
@@ -9,13 +9,31 @@
     "url": "https://github.com/huodoushigemi/el-lowcode/tree/main/packages/el-form-render"
   },
   "type": "module",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "unpkg": "dist/index.iife.js",
+  "jsdelivr": "dist/index.iife.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "development": "./index.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./*": {
+      "development": "./*",
+      "import": "./dist/*",
+      "require": "./dist/*"
+    }
+  },
   "dependencies": {
     "@vue/shared": "^3.2.0"
   },
   "peerDependencies": {
+    "ant-design-vue": "^4.0.0",
     "element-plus": "^2.3.8",
     "vue": "^3.2.0"
   }
