feat: support for vant

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "naive-ui": "^2.36.0",
     "qs": "^6.11.2",
     "uuid": "^9.0.1",
+    "vant": "^4.8.1",
     "vue": "^3.3.4",
     "vue-draggable-plus": "^0.2.6",
     "vue-router": "^4.2.5",
