--- a/packages/el-form-render/package.json
+++ b/packages/el-form-render/package.json
@@ -34,7 +34,9 @@
   },
   "peerDependencies": {
     "ant-design-vue": "^4.0.0",
-    "element-plus": "^2.3.8",
-    "vue": "^3.2.0"
+    "element-plus": "^2.0.0",
+    "naive-ui": "^2.0.0",
+    "vue": "^3.2.0",
+    "vant": "^4.0.0"
   }
 }
