--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "private": false,
-  "version": "0.0.17",
+  "private": true,
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -57,6 +57,7 @@
     "acorn": "^8.10.0",
     "acorn-walk": "^8.2.0",
     "chalk": "^5.3.0",
+    "cssnano": "^6.0.3",
     "dts-bundle-generator": "^8.0.1",
     "esbuild": "^0.19.4",
     "esbuild-register": "^3.4.2",
@@ -91,7 +92,7 @@
     "vite-plugin-markdown-preview": "^1.1.1",
     "vite-plugin-pages": "^0.31.0",
     "vitepress": "1.0.0-beta.7",
-    "vue-tsc": "^1.8.5"
+    "vue-tsc": "^1.8.27"
   },
   "msw": {
     "workerDirectory": "docs\\public"
