--- a/packages/el-form-render/package.json
+++ b/packages/el-form-render/package.json
@@ -1,6 +1,6 @@
 {
   "name": "el-form-render",
-  "version": "0.0.17",
+  "version": "1.0.1",
   "private": false,
   "description": "vue3 + element-plus render form-item easily",
   "license": "MIT",
@@ -9,24 +9,17 @@
     "url": "https://github.com/huodoushigemi/el-lowcode/tree/main/packages/el-form-render"
   },
   "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "unpkg": "dist/index.iife.js",
-  "jsdelivr": "dist/index.iife.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "module": "index.mjs",
+  "types": "index.d.ts",
   "exports": {
     ".": {
-      "development": "./index.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "import": "./index.mjs",
+      "require": "./index.cjs"
     },
     "./*": {
-      "development": "./*",
-      "import": "./dist/*",
-      "require": "./dist/*"
+      "import": "./*.mjs",
+      "require": "./*.cjs",
+      "types": "./*.d.ts"
     }
   },
   "dependencies": {
