--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,17 +3,15 @@
   "private": false,
   "version": "0.0.2",
   "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "unpkg": "dist/index.iife.js",
-  "jsdelivr": "dist/index.iife.js",
-  "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "main": "index.cjs",
+  "module": "index.mjs",
+  "unpkg": "index.iife.js",
+  "jsdelivr": "index.iife.js",
+  "types": "index.d.ts",
   "exports": {
     ".": {
-      "development": "./index.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "import": "./index.mjs",
+      "require": "./index.cjs"
     }
   },
   "dependencies": {
