--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "useDefineForClassFields": true,
+    "useDefineForClassFields": false,
     "module": "ESNext",
     "lib": ["ESNext", "DOM", "DOM.Iterable",],
     "skipLibCheck": true,
@@ -19,9 +19,15 @@
 
     /* Linting */
     "strict": true,
-    "noFallthroughCasesInSwitch": true,
 
-    "types": ["unplugin-vue-macros/macros-global", "element-plus/global"]
+    "paths": {
+      "el-form-render": ["./packages/el-form-render/index.ts"],
+      "@el-lowcode/render": ["./packages/render/index.ts"],
+      "@el-lowcode/crud": ["./packages/crud/index.ts"],
+      "@el-lowcode/utils": ["./packages/utils/index.ts"],
+      "@el-lowcode/designer": ["./packages/designer/index.ts"],
+    },
+    "types": ["unplugin-vue-macros/macros-global", "element-plus/global.d.ts"]
   },
   "vueCompilerOptions": {
     "plugins": [
