--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -15,7 +15,8 @@
   "exports": {
     ".": {
       "import": "./index.mjs",
-      "require": "./index.cjs"
+      "require": "./index.cjs",
+      "types": "./index.d.ts"
     }
   },
   "dependencies": {
