--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -11,7 +11,8 @@
   "exports": {
     ".": {
       "import": "./index.mjs",
-      "require": "./index.cjs"
+      "require": "./index.cjs",
+      "types": "./index.d.ts"
     }
   },
   "dependencies": {
