--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -8,7 +8,8 @@
   "exports": {
     ".": {
       "import": "./index.mjs",
-      "require": "./index.cjs"
+      "require": "./index.cjs",
+      "types": "./index.d.ts"
     }
   },
   "dependencies": {
