--- a/package.json
+++ b/package.json
@@ -24,16 +24,13 @@
     "@vue/shared": "^3.3.4",
     "@vueuse/core": "^10.5.0",
     "@vueuse/router": "^10.5.0",
-    "ant-design-vue": "^4.0.0",
     "axios": "^1.4.0",
     "designer": "^1.0.2",
     "el-form-render": "workspace:*",
     "el-lowcode": "workspace:*",
     "element-plus": "^2.3.14",
-    "naive-ui": "^2.36.0",
     "qs": "^6.11.2",
     "uuid": "^9.0.1",
-    "vant": "^4.8.1",
     "vue": "^3.3.4",
     "vue-draggable-plus": "^0.2.6",
     "vue-router": "^4.2.5",
@@ -59,6 +56,7 @@
     "chalk": "^5.3.0",
     "cssnano": "^6.0.3",
     "dts-bundle-generator": "^8.0.1",
+    "echarts": "^5.5.0",
     "esbuild": "^0.19.4",
     "esbuild-register": "^3.4.2",
     "estree-walker": "^3.0.3",
@@ -92,6 +90,8 @@
     "vite-plugin-markdown-preview": "^1.1.1",
     "vite-plugin-pages": "^0.31.0",
     "vitepress": "1.0.0-beta.7",
+    "vue-demi": "^0.14.7",
+    "vue-echarts": "^6.7.2",
     "vue-tsc": "^1.8.27"
   },
   "msw": {
