--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@el-lowcode/utils": "workspace:*",
     "@element-plus/icons-vue": "^2.1.0",
     "@guolao/vue-monaco-editor": "^1.3.0",
+    "@scena/guides": "^0.29.2",
     "@vue/compiler-sfc": "^3.3.6",
     "@vue/shared": "^3.3.4",
     "@vueuse/core": "^10.5.0",
@@ -29,6 +30,7 @@
     "el-form-render": "workspace:*",
     "el-lowcode": "workspace:*",
     "element-plus": "^2.3.14",
+    "infinite-viewer": "^0.29.1",
     "qs": "^6.11.2",
     "uuid": "^9.0.1",
     "vue": "^3.3.4",
