--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "fs-extra": "^11.1.1",
     "gogocode": "^1.0.55",
     "import-meta-resolve": "^4.0.0",
+    "lodash-es": "^4.17.21",
     "magic-string": "^0.30.4",
     "micromatch": "^4.0.5",
     "msw": "^1.2.3",
