--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -26,8 +26,10 @@
     "@vueuse/core": "^10.5.0",
     "el-form-render": "^0.0.17",
     "monaco-editor": "^0.48.0",
+    "moveable": "^0.53.0",
     "uuid": "^9.0.1",
     "vue-draggable-plus": "^0.2.6",
+    "vue3-moveable": "^0.28.0",
     "wc-appbar": "^0.0.8",
     "wc-fill-remain": "^0.0.7",
     "wc-waterfall": "^0.0.7"
