--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -25,6 +25,8 @@
     "@vue/shared": "^3.2.0",
     "@vueuse/core": "^10.5.0",
     "el-form-render": "^0.0.17",
+    "github-markdown-css": "^5.5.1",
+    "markdown-it": "^14.1.0",
     "monaco-editor": "^0.48.0",
     "moveable": "^0.53.0",
     "tree-tool": "^1.1.8",
