--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -24,6 +24,7 @@
     "@guolao/vue-monaco-editor": "^1.3.0",
     "@vue/shared": "^3.2.0",
     "@vueuse/core": "^10.5.0",
+    "@vueuse/integrations": "^10.11.0",
     "el-form-render": "^0.0.17",
     "github-markdown-css": "^5.5.1",
     "markdown-it": "^14.1.0",
