--- a/packages/designer/plugins/mdui/package.json
+++ b/packages/designer/plugins/mdui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mdui",
-  "description": "Material web components",
-  "icon": "https://avatars.githubusercontent.com/u/19478152",
+  "description": "实现 material you 设计规范的 Web Components 组件库",
+  "icon": "https://raw.githubusercontent.com/zdhxiong/mdui/953011ce2911e2e64b6cb242729df82664f6a78a/packages/jetbrains-plugin/src/main/resources/META-INF/pluginIcon.svg",
   "homepage": "https://gitee.com/httpsgiteecomepalserver/el-lowcode/tree/main/public/plugins/mdui",
   "author": "xxx"
 }
