--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@el-lowcode/crud": "^0.0.16",
+    "@formkit/auto-animate": "^0.8.2",
     "@guolao/vue-monaco-editor": "^1.3.0",
     "@vue/shared": "^3.2.0",
     "@vueuse/core": "^10.5.0",
