--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -31,6 +31,7 @@
     "markdown-it": "^14.1.0",
     "monaco-editor": "^0.48.0",
     "moveable": "^0.53.0",
+    "sortablejs": "^1.15.2",
     "tree-tool": "^1.1.8",
     "uuid": "^9.0.1",
     "vue-draggable-plus": "^0.2.6",
