--- a/packages/designer/plugins/ant-design-vue/package.json
+++ b/packages/designer/plugins/ant-design-vue/package.json
@@ -3,5 +3,6 @@
   "description": "An enterprise-class UI components based on Ant Design and Vue.",
   "icon": "https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg",
   "homepage": "https://gitee.com/httpsgiteecomepalserver/el-lowcode/tree/main/public/plugins/ant-design-vue",
-  "author": "xxx"
+  "author": "xxx",
+  "disabled": true
 }
