--- a/packages/designer/plugins/threejs/package.json
+++ b/packages/designer/plugins/threejs/package.json
@@ -3,5 +3,6 @@
   "description": "世界上最流行的Web 3D JavaScript框架。",
   "icon": "https://threejs.org/files/favicon_white.ico",
   "homepage": "https://gitee.com/httpsgiteecomepalserver/el-lowcode/tree/main/public/plugins/threejs",
-  "author": "xxx"
+  "author": "xxx",
+  "disabled": true
 }
