--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,17 +29,17 @@
     },
     // "types": ["unplugin-vue-macros/macros-global", "element-plus/global.d.ts"]
   },
-  "vueCompilerOptions": {
-    "plugins": [
-      "@vue-macros/volar/define-options",
-      "@vue-macros/volar/define-models",
-      "@vue-macros/volar/define-props",
-      "@vue-macros/volar/define-props-refs",
-      "@vue-macros/volar/short-vmodel",
-      "@vue-macros/volar/define-slots",
-      "@vue-macros/volar/export-props"
-    ]
-  },
+  // "vueCompilerOptions": {
+  //   "plugins": [
+  //     "@vue-macros/volar/define-options",
+  //     "@vue-macros/volar/define-models",
+  //     "@vue-macros/volar/define-props",
+  //     "@vue-macros/volar/define-props-refs",
+  //     "@vue-macros/volar/short-vmodel",
+  //     "@vue-macros/volar/define-slots",
+  //     "@vue-macros/volar/export-props"
+  //   ]
+  // },
   // "types/*", 
   "include": ["packages", "designer", "packages/*"],
   "exclude": ["node_modules", "**/dist"],
