--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -23,11 +23,14 @@
     "@el-lowcode/crud": "^0.0.16",
     "@formkit/auto-animate": "^0.8.2",
     "@guolao/vue-monaco-editor": "^1.3.0",
+    "@isomorphic-git/lightning-fs": "^4.6.0",
     "@vue/shared": "^3.2.0",
     "@vueuse/core": "^10.5.0",
     "@vueuse/integrations": "^10.11.0",
+    "buffer": "^6.0.3",
     "el-form-render": "^0.0.17",
     "github-markdown-css": "^5.5.1",
+    "isomorphic-git": "^1.27.1",
     "markdown-it": "^14.1.0",
     "monaco-editor": "^0.48.0",
     "moveable": "^0.53.0",
