--- a/packages/designer/plugins/element-plus/.lowcode/package.json
+++ b/packages/designer/plugins/element-plus/.lowcode/package.json
@@ -1,5 +1,6 @@
 {
   "name": "element-plus",
+  "displayName": "Element Plus",
   "description": "基于 Vue 3，面向设计师和开发者的组件库",
   "icon": "https://element.eleme.cn/2.0/favicon.ico",
   "homepage": "https://gitee.com/httpsgiteecomepalserver/el-lowcode/tree/main/public/plugins/element-plugin",
