--- a/packages/designer/plugins/ant-design-vue/.lowcode/package.json
+++ b/packages/designer/plugins/ant-design-vue/.lowcode/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ant-design-vue",
+  "displayName": "Ant Design Vue",
   "description": "An enterprise-class UI components based on Ant Design and Vue.",
   "icon": "https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg",
   "homepage": "https://gitee.com/httpsgiteecomepalserver/el-lowcode/tree/main/public/plugins/ant-design-vue",
