--- a/packages/designer/plugins/echarts/package.json
+++ b/packages/designer/plugins/echarts/package.json
@@ -1,5 +1,6 @@
 {
   "name": "echarts",
+  "displayName": "Echarts",
   "description": "一个基于 JavaScript 的开源可视化图表库",
   "icon": "https://echarts.apache.org/zh/images/favicon.png",
   "homepage": "https://gitee.com/httpsgiteecomepalserver/el-lowcode/tree/main/public/plugins/echarts",
