--- a/packages/designer/plugins/mdui/.lowcode/package.json
+++ b/packages/designer/plugins/mdui/.lowcode/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mdui",
+  "displayName": "MDUI",
   "description": "实现 material you 设计规范的 Web Components 组件库",
   "icon": "https://raw.githubusercontent.com/zdhxiong/mdui/953011ce2911e2e64b6cb242729df82664f6a78a/packages/jetbrains-plugin/src/main/resources/META-INF/pluginIcon.svg",
   "homepage": "https://gitee.com/httpsgiteecomepalserver/el-lowcode/tree/main/public/plugins/mdui",
