--- a/packages/designer/plugins/web/.lowcode/package.json
+++ b/packages/designer/plugins/web/.lowcode/package.json
@@ -1,5 +1,6 @@
 {
   "name": "web",
+  "displayName": "Web",
   "description": "一些基础组件",
   "icon": "https://gd-hbimg.huaban.com/a0b457393dccfdd658d709b890a3fddd4ef5756c24cd-6hPlHQ_fw658webp",
   "homepage": "https://gitee.com/httpsgiteecomepalserver/el-lowcode/tree/main/public/plugins/web",
