--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node ./build/vite.config.js",
     "clean": "rimraf --glob dist \"packages/*/dist\"",
     "preview": "vite preview",
     "docs:dev": "vitepress dev docs",
