--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "vite-plugin-css-injected-by-js": "^3.5.1",
     "vite-plugin-markdown-preview": "^1.1.1",
     "vite-plugin-pages": "^0.31.0",
+    "vite-plugin-singlefile": "^2.0.2",
     "vitepress": "1.0.0-beta.7",
     "vue-demi": "^0.14.7",
     "vue-tsc": "^1.8.27"
