--- a/plugins/chatgpt/.lowcode/package.json
+++ b/plugins/chatgpt/.lowcode/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatgap",
+  "name": "chatgpt",
   "displayName": "Chatgap",
   "description": "AI 帮你写页面",
   "icon": "https://cdn.pixabay.com/photo/2023/05/08/00/43/chatgpt-7977357_640.png",
