--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@vue/shared": "^3.3.4",
     "@vueuse/core": "^10.5.0",
     "@vueuse/router": "^10.5.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.4.0",
     "echarts": "^5.5.1",
     "el-form-render": "workspace:*",
