--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "element-plus": "^2.8.1",
     "infinite-viewer": "^0.29.1",
     "lodash-es": "^4.17.21",
+    "markdown-it": "^14.1.0",
     "md5": "^2.3.0",
     "postcss": "^8.4.41",
     "qs": "^6.11.2",
