--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "markdown-it": "^14.1.0",
     "md5": "^2.3.0",
     "postcss": "^8.4.41",
+    "qrcode": "^1.5.4",
     "qs": "^6.11.2",
     "uuid": "^9.0.1",
     "vue": "^3.3.4",
