--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@el-lowcode/utils": "workspace:*",
     "@element-plus/icons-vue": "^2.1.0",
     "@guolao/vue-monaco-editor": "^1.3.0",
+    "@highlightjs/vue-plugin": "^2.1.0",
     "@scena/guides": "^0.29.2",
     "@vue/compiler-sfc": "^3.3.6",
     "@vue/shared": "^3.3.4",
@@ -32,6 +33,7 @@
     "el-form-render": "workspace:*",
     "el-lowcode": "workspace:*",
     "element-plus": "^2.8.1",
+    "highlight.js": "^11.10.0",
     "infinite-viewer": "^0.29.1",
     "lodash-es": "^4.17.21",
     "markdown-it": "^14.1.0",
