--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@el-lowcode/utils": "workspace:*",
     "@element-plus/icons-vue": "^2.1.0",
     "@guolao/vue-monaco-editor": "^1.3.0",
-    "@highlightjs/vue-plugin": "^2.1.0",
     "@scena/guides": "^0.29.2",
     "@vue/compiler-sfc": "^3.3.6",
     "@vue/shared": "^3.3.4",
@@ -41,6 +40,8 @@
     "postcss": "^8.4.41",
     "qrcode": "^1.5.4",
     "qs": "^6.11.2",
+    "solid-element": "^1.9.0",
+    "solid-js": "^1.9.2",
     "uuid": "^9.0.1",
     "vue": "^3.3.4",
     "vue-draggable-plus": "^0.2.6",
@@ -49,6 +50,7 @@
     "vue-router": "^4.2.5",
     "wc-appbar": "^0.0.8",
     "wc-fill-remain": "^0.0.7",
+    "wc-hljs": "^0.0.0",
     "wc-waterfall": "^0.0.7"
   },
   "devDependencies": {
