--- a/package.json
+++ b/package.json
@@ -21,6 +21,17 @@
     "@element-plus/icons-vue": "^2.1.0",
     "@guolao/vue-monaco-editor": "^1.3.0",
     "@scena/guides": "^0.29.2",
+    "@tiptap/core": "^2.8.0",
+    "@tiptap/extension-table": "^2.8.0",
+    "@tiptap/extension-table-cell": "^2.8.0",
+    "@tiptap/extension-table-header": "^2.8.0",
+    "@tiptap/extension-table-row": "^2.8.0",
+    "@tiptap/extension-task-item": "^2.8.0",
+    "@tiptap/extension-task-list": "^2.8.0",
+    "@tiptap/extension-text-style": "^2.8.0",
+    "@tiptap/pm": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
+    "@tiptap/vue-3": "^2.8.0",
     "@vue/compiler-sfc": "^3.3.6",
     "@vue/shared": "^3.3.4",
     "@vueuse/core": "^10.5.0",
@@ -34,9 +45,11 @@
     "element-plus": "^2.8.1",
     "highlight.js": "^11.10.0",
     "infinite-viewer": "^0.29.1",
+    "install": "^0.13.0",
     "lodash-es": "^4.17.21",
     "markdown-it": "^14.1.0",
     "md5": "^2.3.0",
+    "npm": "^10.9.0",
     "postcss": "^8.4.41",
     "qrcode": "^1.5.4",
     "qs": "^6.11.2",
