--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@guolao/vue-monaco-editor": "^1.3.0",
     "@scena/guides": "^0.29.2",
     "@tiptap/core": "^2.8.0",
+    "@tiptap/extension-color": "^2.8.0",
+    "@tiptap/extension-link": "^2.8.0",
     "@tiptap/extension-table": "^2.8.0",
     "@tiptap/extension-table-cell": "^2.8.0",
     "@tiptap/extension-table-header": "^2.8.0",
     "@tiptap/extension-table-row": "^2.8.0",
     "@tiptap/extension-task-item": "^2.8.0",
     "@tiptap/extension-task-list": "^2.8.0",
+    "@tiptap/extension-text-align": "^2.8.0",
     "@tiptap/extension-text-style": "^2.8.0",
     "@tiptap/pm": "^2.8.0",
     "@tiptap/starter-kit": "^2.8.0",
