--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@scena/guides": "^0.29.2",
     "@tiptap/core": "^2.8.0",
     "@tiptap/extension-color": "^2.8.0",
+    "@tiptap/extension-highlight": "^2.9.1",
     "@tiptap/extension-image": "^2.8.0",
     "@tiptap/extension-link": "^2.8.0",
     "@tiptap/extension-table": "^2.8.0",
@@ -61,6 +62,8 @@
     "qs": "^6.11.2",
     "solid-element": "^1.9.0",
     "solid-js": "^1.9.2",
+    "tippy.js": "^6.3.7",
+    "tippy.vue": "^3.2.1",
     "tiptap-extension-resize-image": "^1.1.9",
     "uuid": "^9.0.1",
     "vue": "^3.3.4",
