--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tiptap/extension-highlight": "^2.9.1",
     "@tiptap/extension-image": "^2.8.0",
     "@tiptap/extension-link": "^2.8.0",
+    "@tiptap/extension-placeholder": "^2.9.1",
     "@tiptap/extension-table": "^2.8.0",
     "@tiptap/extension-table-cell": "^2.8.0",
     "@tiptap/extension-table-header": "^2.8.0",
@@ -63,7 +64,6 @@
     "solid-element": "^1.9.0",
     "solid-js": "^1.9.2",
     "tippy.js": "^6.3.7",
-    "tippy.vue": "^3.2.1",
     "tiptap-extension-resize-image": "^1.1.9",
     "uuid": "^9.0.1",
     "vue": "^3.3.4",
