--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lodash-es": "^4.17.21",
     "markdown-it": "^14.1.0",
     "md5": "^2.3.0",
+    "moveable": "^0.53.0",
     "npm": "^10.9.0",
     "postcss": "^8.4.41",
     "qrcode": "^1.5.4",
@@ -71,6 +72,7 @@
     "vue-echarts": "^7.0.3",
     "vue-request": "^2.0.4",
     "vue-router": "^4.2.5",
+    "vue3-moveable": "^0.28.0",
     "wc-appbar": "^0.0.8",
     "wc-fill-remain": "^0.0.7",
     "wc-hljs": "^0.0.0",
