--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "1.0.2",
+  "version": "1.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -136,7 +136,7 @@
     "vite-plugin-singlefile": "^2.0.2",
     "vitepress": "1.0.0-beta.7",
     "vue-demi": "^0.14.7",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^2.*"
   },
   "msw": {
     "workerDirectory": "docs\\public"
