--- a/packages/el-lowcode/package.json
+++ b/packages/el-lowcode/package.json
@@ -19,16 +19,10 @@
     }
   },
   "dependencies": {
-    "@el-lowcode/crud": "^1.0.2",
     "@el-lowcode/render": "^1.0.2",
-    "@vue/shared": "^3.2.0",
-    "el-form-render": "^1.0.2",
-    "wc-appbar": "^0.0.8",
-    "wc-fill-remain": "^0.0.7",
-    "wc-waterfall": "^0.0.7"
+    "@vue/shared": "^3.2.0"
   },
   "peerDependencies": {
-    "element-plus": "^2.3.8",
     "vue": "^3.2.0"
   }
 }
