--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "wc-waterfall": "^0.0.7"
   },
   "devDependencies": {
+    "@babel/generator": "^7.26.5",
+    "@babel/parser": "^7.26.5",
     "@iconify/json": "^2.2.121",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-commonjs": "^25.0.5",
@@ -101,7 +103,6 @@
     "estree-walker": "^3.0.3",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
-    "gogocode": "^1.0.55",
     "import-meta-resolve": "^4.0.0",
     "jsdom": "^24.1.1",
     "magic-string": "^0.30.4",
