--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tiptap/pm": "^2.8.0",
     "@tiptap/starter-kit": "^2.8.0",
     "@tiptap/vue-3": "^2.8.0",
+    "@vue/compiler-core": "^3.5.13",
     "@vue/compiler-sfc": "^3.3.6",
     "@vue/shared": "^3.3.4",
     "@vueuse/core": "^10.5.0",
@@ -51,6 +52,7 @@
     "element-plus": "^2.8.1",
     "hexoid": "^2.0.0",
     "highlight.js": "^11.10.0",
+    "html-parse-string": "^0.0.9",
     "infinite-viewer": "^0.29.1",
     "lodash-es": "^4.17.21",
     "markdown-it": "^14.1.0",
@@ -70,6 +72,7 @@
     "vue-echarts": "^7.0.3",
     "vue-request": "^2.0.4",
     "vue-router": "^4.2.5",
+    "vue-tippy": "^6.6.0",
     "vue3-moveable": "^0.28.0",
     "wc-appbar": "^0.0.8",
     "wc-fill-remain": "^0.0.7",
@@ -96,7 +99,6 @@
     "acorn": "^8.10.0",
     "acorn-walk": "^8.2.0",
     "chalk": "^5.3.0",
-    "cssnano": "^6.0.3",
     "dts-bundle-generator": "^8.0.1",
     "esbuild": "^0.19.4",
     "esbuild-register": "^3.4.2",
