--- a/plugins/vuetify/.lowcode/package.json
+++ b/plugins/vuetify/.lowcode/package.json
@@ -2,7 +2,7 @@
     "name": "vuetify",
     "displayName": "Vuetify",
     "description": "Vuetify is a no design skills required Open Source UI Library with beautifully handcrafted Vue Components.",
-    "icon": "https://vuetifyjs.com/favicon.ico",
+    "icon": "https://api.iconify.design/logos:vuetifyjs.svg",
     "homepage": "https://gitee.com/httpsgiteecomepalserver/el-lowcode/tree/main/public/plugins/vuetify",
     "author": "xxx"
   }
