--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "acorn-walk": "^8.2.0",
     "chalk": "^5.3.0",
     "dts-bundle-generator": "^8.0.1",
+    "esbuild": "^0.25.0",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
     "micromatch": "^4.0.5",
