--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   "devDependencies": {
     "@babel/generator": "^7.26.5",
     "@babel/parser": "^7.26.5",
+    "@babel/types": "^7.26.9",
     "@iconify/json": "^2.2.121",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
@@ -97,6 +98,7 @@
     "chalk": "^5.3.0",
     "dts-bundle-generator": "^8.0.1",
     "esbuild": "^0.25.0",
+    "estree-walker": "^3.0.3",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
     "micromatch": "^4.0.5",
