--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "estree-walker": "^3.0.3",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
+    "magic-string": "^0.30.17",
     "micromatch": "^4.0.5",
     "msw": "^1.2.3",
     "rollup": "^3.27.2",
