--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "axios": "^1.4.0",
     "color": "^4.2.3",
     "echarts": "^5.5.1",
-    "el-form-render": "workspace:*",
+    "el-form-render": "^2.0.6",
     "el-lowcode": "workspace:*",
     "element-plus": "^2.8.1",
     "hexoid": "^2.0.0",
