--- a/packages/el-lowcode/package.json
+++ b/packages/el-lowcode/package.json
@@ -9,18 +9,13 @@
     "url": "https://github.com/huodoushigemi/el-lowcode"
   },
   "type": "module",
-  "module": "index.mjs",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./index.d.ts"
-    }
-  },
   "dependencies": {
-    "@el-lowcode/render": "^1.0.3",
-    "@vue/shared": "^3.2.0"
+    "@el-lowcode/render": "workspace:*",
+    "@vue/shared": "^3.2.0",
+    "@vueuse/core": "^10.5.0"
   },
   "peerDependencies": {
     "vue": "^3.2.0"
