--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -9,5 +9,5 @@
     "allowJs": true,
     "types": ["node"]
   },
-  "include": ["vite.config.ts", "build", "docs/.vitepress/config.ts"]
+  "include": ["vite.config.ts", "**/vite.config.js", "build", "docs/.vitepress/config.ts", "uno.config.ts"]
 }
