--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && node ./build/vite.config.js",
+    "build": "pnpm packages:build && pnpm plugins:build && vite build",
     "clean": "rimraf --glob dist \"packages/*/dist\" \"plugins/*/.lowcode/dist\"",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs && pnpm build",
     "docs:preview": "vitepress preview docs",
-    "packages:build": "node build/build.js",
-    "packages:publish": "node build/publish.js"
+    "packages:build": "node build/build-packages.js",
+    "packages:publish": "node build/publish.js",
+    "plugins:build": "node ./build/build-plugins.js"
   },
   "dependencies": {
+    "el-lowcode": "workspace:*",
     "@el-lowcode/crud": "workspace:*",
     "@el-lowcode/designer": "workspace:*",
     "@el-lowcode/render": "workspace:*",
+    "@el-lowcode/render-drag": "workspace:*",
     "@el-lowcode/utils": "workspace:*",
     "@guolao/vue-monaco-editor": "^1.3.0",
     "@scena/guides": "^0.29.2",
@@ -36,6 +39,7 @@
     "@tiptap/pm": "^2.8.0",
     "@tiptap/starter-kit": "^2.8.0",
     "@tiptap/vue-3": "^2.8.0",
+    "@unocss/preset-wind4": "^66.5.4",
     "@vue/compiler-core": "^3.5.13",
     "@vue/compiler-sfc": "^3.3.6",
     "@vue/shared": "^3.3.4",
@@ -46,8 +50,7 @@
     "axios": "^1.4.0",
     "color": "^4.2.3",
     "echarts": "^5.5.1",
-    "el-form-render": "^2.0.6",
-    "el-lowcode": "workspace:*",
+    "el-form-render": "^2.0.10",
     "element-plus": "^2.8.1",
     "hexoid": "^2.0.0",
     "highlight.js": "^11.10.0",
@@ -66,6 +69,7 @@
     "tiptap-extension-resize-image": "^1.1.9",
     "uuid": "^9.0.1",
     "vue": "^3.5.13",
+    "vue-demi": "^0.14.10",
     "vue-draggable-plus": "^0.2.6",
     "vue-echarts": "^7.0.3",
     "vue-request": "^2.0.4",
@@ -74,7 +78,7 @@
     "vue3-moveable": "^0.28.0",
     "wc-appbar": "^0.0.8",
     "wc-hljs": "^0.0.0",
-    "wc-mdit": "^0.0.1",
+    "wc-mdit": "^0.0.6",
     "wc-waterfall": "^0.0.7"
   },
   "devDependencies": {
@@ -89,7 +93,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.4.8",
     "@unocss/postcss": "0.54.1",
-    "@unocss/preset-rem-to-px": "0.54.1",
+    "@unocss/preset-rem-to-px": "66.5.4",
     "@vitejs/plugin-vue": "^5.1.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue-macros/volar": "^0.14.3",
@@ -112,24 +116,22 @@
     "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.65.1",
-    "strip-literal": "^1.3.0",
     "tslib": "^2.6.1",
     "typescript": "^5.1.6",
-    "ufo": "^1.3.1",
-    "unocss": "0.54.1",
+    "unocss": "66.5.4",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.17.0",
     "unplugin-vue": "^4.2.5",
     "unplugin-vue-components": "^0.25.2",
     "unplugin-vue-jsx": "^0.2.2",
     "unplugin-vue-macros": "^2.11.6",
-    "vite": "^4.4.5",
+    "vite": "^7.1.10",
     "vite-plugin-css-injected-by-js": "^3.5.1",
+    "vite-plugin-externalize-dependencies": "^1.0.1",
     "vite-plugin-markdown-preview": "^1.1.1",
     "vite-plugin-pages": "^0.31.0",
     "vite-plugin-singlefile": "^2.0.2",
     "vitepress": "1.0.0-beta.7",
-    "vue-demi": "^0.14.7",
     "vue-tsc": "^2.*"
   },
   "msw": {
