--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -9,27 +9,20 @@
     "url": "https://github.com/huodoushigemi/el-lowcode/tree/main/packages/el-designer"
   },
   "type": "module",
-  "main": "index.cjs",
-  "module": "index.mjs",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./index.mjs",
-      "require": "./index.cjs",
-      "types": "./index.d.ts"
-    }
-  },
   "dependencies": {
-    "@el-lowcode/crud": "^0.0.16",
+    "@el-lowcode/render": "workspace:*",
+    "@el-lowcode/render-drag": "workspace:*",
     "@formkit/auto-animate": "^0.8.2",
     "@guolao/vue-monaco-editor": "^1.3.0",
-    "@vue/repl": "^4.5.1",
     "@vue/shared": "^3.2.0",
     "@vueuse/core": "^10.5.0",
     "@vueuse/integrations": "^10.11.0",
     "buffer": "^6.0.3",
-    "el-form-render": "^2.0.6",
-    "github-markdown-css": "^5.5.1",
+    "el-form-render": "^2.0.10",
+    "es-toolkit": "^1.40.0",
     "markdown-it": "^14.1.0",
     "monaco-editor": "^0.48.0",
     "moveable": "^0.53.0",
@@ -38,7 +31,6 @@
     "uuid": "^9.0.1",
     "vue3-moveable": "^0.28.0",
     "wc-appbar": "^0.0.8",
-    "wc-fill-remain": "^0.0.7",
     "wc-waterfall": "^0.0.7"
   },
   "peerDependencies": {
