--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -3,15 +3,9 @@
   "private": false,
   "version": "1.0.3",
   "type": "module",
-  "module": "index.mjs",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./index.mjs",
-      "require": "./index.cjs",
-      "types": "./index.d.ts"
-    }
-  },
   "dependencies": {
     "@vue/shared": "^3.2.0"
   },
