--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -17,12 +17,14 @@
     "@el-lowcode/render-drag": "workspace:*",
     "@formkit/auto-animate": "^0.8.2",
     "@guolao/vue-monaco-editor": "^1.3.0",
+    "@intable/vue": "^0.0.5",
     "@vue/shared": "^3.2.0",
     "@vueuse/core": "^10.5.0",
     "@vueuse/integrations": "^10.11.0",
     "buffer": "^6.0.3",
     "el-form-render": "^2.0.10",
     "es-toolkit": "^1.40.0",
+    "intable": "^0.0.5",
     "markdown-it": "^14.1.0",
     "monaco-editor": "^0.48.0",
     "moveable": "^0.53.0",
