--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "vue-draggable-plus": "^0.2.6",
     "vue-echarts": "^7.0.3",
     "vue-request": "^2.0.4",
-    "vue-router": "^4.2.5",
+    "vue-router": "^4.6.4",
     "vue-tippy": "^6.6.0",
     "vue3-moveable": "^0.28.0",
     "wc-appbar": "^0.0.8",
@@ -127,6 +127,7 @@
     "unplugin-vue-macros": "^2.11.6",
     "vite": "^7.1.10",
     "vite-plugin-css-injected-by-js": "^3.5.1",
+    "vite-plugin-external": "^6.2.2",
     "vite-plugin-externalize-dependencies": "^1.0.1",
     "vite-plugin-markdown-preview": "^1.1.1",
     "vite-plugin-pages": "^0.31.0",
